登录界面完成

--- a/pan_view/css/index.css
+++ b/pan_view/css/index.css
@@ -8,3 +8,15 @@
     font-size: 37px;
     font-weight: 500;
 }
+#mask{
+    position: absolute;
+    right: 17%;
+    top: 130px;
+    background-color: white;
+    opacity: 0.6;
+    padding: 10px;
+    overflow: hidden;
+}
+.login_span{
+    font-size: 15px;
+}
