--- a/pan_view/css/default.css
+++ b/pan_view/css/default.css
@@ -40,3 +40,9 @@ a{
 a:hover{
     text-decoration:none;
 }
+button{
+    margin: 0px;
+    border: 0px;
+    padding: 0px;
+    background-color: rgba(0, 0, 0, 0);
+}
