--- a/pan_view/css/file.css
+++ b/pan_view/css/file.css
@@ -5,7 +5,6 @@
 #title_left{
     width: 180px;
     height: 100%;
-    margin-top: 5px;
     margin-left: 10px;
     display: inline-block;
 }
@@ -59,9 +58,6 @@
 #user_name{
     display: inline-block;
     margin-right: 10px;
-}
-.mousein{
-
 }
 #user_name_animation_nomal{
     position: absolute;
@@ -118,17 +114,52 @@
 }
 #main{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 60px);
 }
 #main_left{
     width: 200px;
     background: #f8f9fa;
-    height: 100%;;
+    height: 100%;
+    padding-top: 10px;
+    display: inline-block;
 }
 #ul_left{
-
+    list-style: none;
+}
+.a_left{
+    display: block;
+    padding-left: 40px;
+    height: 45px;
+    font: 12px/1.5 "Microsoft YaHei", arial, SimSun, 宋体;
+    font-size: 15px;
+    color: #666;
+}
+.a_left:hover{
+    background-color: rgba(0, 0, 0, .1);
+    color: #666;
+}
+#glyphicon_li_left{
+    position: absolute;
+    left: -20px;
+    top: 15px;
 }
 .li_left{
-    display: block;
-    background: black;
+    position: relative;
+    line-height: 45px;
+    padding-left: 20px;
+}
+#left_list_active{
+    background-color: rgba(0, 0, 0, .1);
+    color: rgb(68, 158, 231);
+}
+#left_bottom{
+    position: absolute;
+    left: 0px;
+    bottom: 30px;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+#left_process_bar{
+    height: 5px;
 }
