--- a/pan_view/css/file.css
+++ b/pan_view/css/file.css
@@ -59,6 +59,13 @@
     display: inline-block;
     margin-right: 10px;
 }
+#user_name_img{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-right: 10px;
+    display: inline-block;
+}
 #user_name_animation_nomal{
     position: absolute;
     width: 260px;
@@ -120,7 +127,6 @@
     width: 200px;
     background: #f8f9fa;
     height: 100%;
-    padding-top: 10px;
     display: inline-block;
 }
 #ul_left{
@@ -162,4 +168,87 @@
 }
 #left_process_bar{
     height: 5px;
+}
+#main_main{
+    width: calc(100% - 200px);
+    height: 100%;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: -4px;
+    padding-left: 20px;
+}
+#main_main_top{
+    margin-top: 10px;
+    height: 50px;
+    padding: 5px 0px;
+}
+.button_main_main_top{
+    font: 12px/1.5 "Microsoft YaHei", arial, SimSun, 宋体;
+    margin-left: 10px;
+    font-size: 15px;
+    color: #0098EA;
+    border: 1px #C3EAFF solid;
+}
+.button_main_main_top:hover{
+    color: #0098EA;
+}
+/* 字体设置 */
+div{
+    font: 12px/1.5 "Microsoft YaHei", arial, SimSun, 宋体;
+}
+input[type='checkbox']{
+    width: 15px;
+    height: 15px;
+    background-color: #fff;
+    -webkit-appearance:none;
+    border: 1px solid #c9c9c9;
+    border-radius: 2px;
+    outline: none;
+    display: inline-block;
+    vertical-align:sub;
+}
+input[type=checkbox]:checked{
+    background: url("../img/file/checkbox_select.png")no-repeat center;
+}
+.span_file_attr{
+    color: #666;
+}
+#file_main{
+    width: 100%;
+    height: calc(100% - 103px);
+}
+.file_left{
+    width: 60%;
+    display: inline-block;
+}
+.file_mid{
+    width: 20%;
+    height: 100%;
+    vertical-align:middle;
+    display: inline-block;
+}
+.file_right{
+    width: calc(20% - 8px);
+    height: 100%;
+    vertical-align:middle;
+    display: inline-block;
+}
+#file_table{
+    width: 100%;
+}
+.file_tr{
+    height: 45px;
+    width: 100%;
+    line-height: 45px;
+}
+.file_td{
+
+}
+.file_img{
+    width: 30px;
+    height: 30px;
+    margin-left: 5px;
+}
+.file_name{
+    margin-left: 7px;
 }
