--- a/pan_view/css/file.css
+++ b/pan_view/css/file.css
@@ -175,12 +175,12 @@
     display: inline-block;
     vertical-align: top;
     margin-left: -4px;
-    padding-left: 20px;
 }
 #main_main_top{
     margin-top: 10px;
     height: 50px;
     padding: 5px 0px;
+    padding-left: 20px;
 }
 .button_main_main_top{
     font: 12px/1.5 "Microsoft YaHei", arial, SimSun, 宋体;
@@ -216,6 +216,7 @@ input[type=checkbox]:checked{
 #filehead_left{
     width: 60%;
     display: inline-block;
+    padding-left: 20px;
 }
 #filehead_mid{
     width: 20%;
@@ -232,10 +233,12 @@ input[type=checkbox]:checked{
 #file_main{
     width: 100%;
     height: calc(100% - 103px);
+    padding-right: 10px;
 }
 .file_left{
-    width: 60%;
+    width: calc(60% + 10px);
     display: inline-block;
+    padding-left: 20px;
 }
 .file_mid{
     width: 20%;
@@ -244,7 +247,8 @@ input[type=checkbox]:checked{
     display: inline-block;
 }
 .file_right{
-    width: calc(20% - 8px);
+    padding-left: 5px;
+    width: calc(20% - 25px);
     height: 100%;
     vertical-align:middle;
     display: inline-block;
@@ -256,6 +260,7 @@ input[type=checkbox]:checked{
     height: 45px;
     width: 100%;
     line-height: 45px;
+    border-bottom: 1px solid #f2f6fd;
 }
 .file_td{
 
