修正字体导致的排版混乱问题

--- a/pan_view/css/file.css
+++ b/pan_view/css/file.css
@@ -192,6 +192,10 @@
 .button_main_main_top:hover{
     color: #0098EA;
 }
+div{
+    font: "Microsoft YaHei";
+    font-size: 12px;
+}
 input[type='checkbox']{
     width: 15px;
     height: 15px;
