--- a/pan_view/css/file.css
+++ b/pan_view/css/file.css
@@ -170,7 +170,6 @@ input[type=checkbox]:checked{
 .file_img{
     width: 30px;
     height: 30px;
-    margin-left: 5px;
 }
 .file_name{
     margin-left: 7px;
@@ -190,4 +189,8 @@ input[type=checkbox]:checked{
 }
 .btn_search:focus{
     outline: none;
+}
+.checkbox_div{
+    width: 20px;
+    display: inline-block;
 }
