--- a/pan_view/css/user_info_default.css
+++ b/pan_view/css/user_info_default.css
@@ -17,12 +17,13 @@ p{
 }
 #left_list{
     width: 280px;
-    height: 100%;
+    height: calc(100% - 57px);
     background: #FBFBFB;
     border-left: 1px #DDDDDD solid;
     border-right: 1px #DDDDDD solid;
     display: inline-block;
     vertical-align: top;
+    z-index: -3;
 }
 #left_list_userinfo{
     height: 180px;
@@ -82,7 +83,7 @@ p{
     color: rgb(68, 158, 231);
 }
 #right_main{
-    width: calc(100% - 283px);
+    width: calc(100% - 350px);
     height: 100%;
     display: inline-block;
     padding-left: 40px;
@@ -118,4 +119,8 @@ p{
     background: #EEE;
     border-top: 1px #AAA solid;
     text-align: center;
+    z-index: -2;
+}
+.input_right_main_main_left{
+    margin-top: 5px;
 }
