1.前端完成 2.改写login.jsp

--- a/src/main/webapp/static/css/index.css
+++ b/src/main/webapp/static/css/index.css
@@ -23,3 +23,15 @@
 .login_span{
     font-size: 15px;
 }
+#login_main{
+    position: absolute;
+    margin-left: 0px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+#regedit_main{
+    position: absolute;
+    margin-left: -400px;
+    overflow: hidden;
+    white-space: nowrap;
+}
