--- a/src/main/webapp/static/css/file.css
+++ b/src/main/webapp/static/css/file.css
@@ -187,6 +187,7 @@ input[type=checkbox]:checked{
 }
 .file_name{
     margin-left: 7px;
+    user-select: text;
 }
 .file_tr:hover{
     background-color:rgba(65, 159, 247, 0.1);
