--- a/src/main/webapp/static/css/file.css
+++ b/src/main/webapp/static/css/file.css
@@ -210,8 +210,15 @@ input[type=checkbox]:checked{
     display: inline-block;
 }
 #tip{
-    width: 200px;
     height: 50px;
-    background-color: red;
     position: absolute;
+    top: 30px;
+    left: 30%;
+    right: 30%;
+}
+#tip_input{
+    position: absolute;
+    left: 30%;
+    right: 30%;
+    height: 100px;
 }
