--- a/src/main/webapp/static/css/file.css
+++ b/src/main/webapp/static/css/file.css
@@ -222,3 +222,17 @@ input[type=checkbox]:checked{
     right: 30%;
     height: 100px;
 }
+test{
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #333;
+    white-space: nowrap;
+}
+test:focus,test:hover{
+    color: #262626;
+    text-decoration: none;
+    background-color: #f5f5f5;
+}
